examples/import-statements.co
import "foo/bar"
import "foo/bar" as lol, bottle
// import "./bad-name." // error: cannot infer package identifier
import "./bad-name." as custom_name
import "./s-o-s"
import "cat" x, y as y2
import "fruit" { apple,
  banana, citrus,
  peach as not_a_plum
}
// import ""   // error: invalid import path (empty path)
// import "/"  // error: invalid import path (absolute path)
// import "."  // error: invalid import path (cannot import itself)
// import " "  // error: invalid import path (leading whitespace)
// import "a:" // error: invalid import path (invalid character)
